# salt

./: .gitignore  Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
dev/: Cargo.toml
dev/src/: main.rs
examples/app-core/: Cargo.toml
examples/app-core/src/: lib.rs
examples/drawing-app/: Cargo.toml  README.md
examples/drawing-app/src/: lib.rs  view.rs
examples/drawing_app/src/: lib.rs
src/: lib.rs  wasm.rs
src/ui/: color.rs  context.rs  gesture.rs  mod.rs  view.rs
src/ui/components/: circle.rs  mod.rs  path.rs  rect.rs  text.rs
templates/: index.html
templates/js/: salt.js
