[package]
name = "salt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = ["console"] }
wee_alloc = { version = "0.4.5", optional = true }
color = "0.3.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
opt-level = "s"
lto = true

[features]
default = ["wee_alloc"]

[workspace]
members = [".", "cli"]
exclude = ["examples"]
