[package]
name = "salt-cli"
version = "0.1.0"
edition = "2021"
description = "Development CLI for Salt"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
notify = "6.0"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
hyper-staticfile = "0.9"
futures = "0.3"
anyhow = "1.0"
colored = "2.0"
ctrlc = "3.4"

[[bin]]
name = "salt"
path = "src/main.rs"
