[package]
name = "drawing-app"
version = "0.1.0"
edition = "2021"
description = "A simple drawing application using the Salt SVG framework"

[lib]
crate-type = ["cdylib"]

[dependencies]
backer = { git = "https://github.com/cyypherus/backer.git", branch = "main" }
color = "0.3.1"
salt = { path = "../.." }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["console"] }

[profile.release]
opt-level = "s"
lto = true

[workspace]
members = []
